<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/constraint"
    tools:context=".MapsActivity">


    <LinearLayout
        android:id="@+id/map"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:background="@color/lightBlue"
        android:weightSum="10"
        app:layout_constraintBottom_toTopOf="@id/nav_bar"
        app:layout_constraintLeft_toRightOf="parent"
        app:layout_constraintRight_toLeftOf="parent">

        <Button
            android:id="@+id/searchButton"
            android:layout_width="300dp"
            android:layout_height="0dp"
            android:layout_marginStart="52dp"
            android:layout_marginTop="60dp"
            android:backgroundTint="@color/mauve"
            android:gravity="center"
            android:text="@string/view_list"
            android:textSize="20dp"
            android:textStyle="bold"
            android:textColor="@color/white"
            android:layout_weight="1"
            android:onClick="showHideList"
            app:layout_constraintTop_toBottomOf="parent"
            app:layout_constraintBottom_toTopOf="@id/mapFragment"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent" />


        <fragment
            android:id="@+id/mapFragment"
            android:name="com.google.android.gms.maps.SupportMapFragment"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="9"/>

        <ListView
            android:id="@+id/list_view"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:gravity="center_horizontal"
            android:background="@color/lightBlue"
            android:layout_weight="0"/>

    </LinearLayout>


    <LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:id="@+id/nav_bar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent">

        <com.google.android.material.bottomnavigation.BottomNavigationView
            android:id="@+id/bottom_navigation"
            style="@style/Widget.MaterialComponents.BottomNavigationView.Colored"
            android:layout_width="match_parent"
            android:background="@color/mutedBlue"
            android:layout_height="wrap_content"
            app:menu="@menu/navigation_menu" />

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>